# R-AutoBuy

./: .gitignore  Cargo.toml  readme.md  sites.example.toml  sites.toml
src/: browser.rs  config.rs  find.rs  group.rs  main.rs  step.rs
