[workspace]

[package]
name = "scraper"
version = "0.1.0"
authors = ["Matthew Block <mtblock1@gmail.com>"]
edition = "2018"

[dependencies]
fantoccini = "0.14.2"
webdriver = "0.41.0"
tokio = { version = "0.2.0", features = [ "full" ] }
toml = "0.5"
serde = "1.0.97"
serde_derive = "1.0"
serde_json = "1.0"
image = "0.23.12"